Last minute fixes of nav links and z-index of icons.

--- a/_scss/styles/elements/_icons.scss
+++ b/_scss/styles/elements/_icons.scss
@@ -15,7 +15,7 @@
   path {
   	fill:white;
   }
-  z-index:1000;
+  //z-index:1000;
 }
 
 .icon.icon--big {
